# theproject

./: .gitignore  docker-compose.yml
backend/: .dockerignore  .env  Cargo.toml  Dockerfile  diesel.toml  docker-compose.yml
backend/src/: db.rs  main.rs  models.rs  routes.rs
backend/src/controllers/: user_controller.rs
backend/src/models/: media.rs  mod.rs  user.rs
backend/src/repositories/: media_repository.rs  mod.rs  user_repository.rs
backend/src/routes/: user_routes.rs
backend/src/services/: user_service.rs
backend/src/utils/: password.rs
frontend/: bun.lockb
frontend/src/: App.tsx
frontend/src/components/: UserList.tsx
