[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "*"
argon2 = "0.5.3"
bson = "2.13.0"
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.31"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.40.0"
urlencoding = "2.1.3"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
dotenv = "0.15.0"
http = "0.2.12"
